--- a/src/components/OrderConfirmation.css
+++ b/src/components/OrderConfirmation.css
@@ -4,6 +4,7 @@ body {
     background-color: #CE2829;
 }
 
+
 .center-container {
     display: flex;
     flex-direction: column;
@@ -21,9 +22,15 @@ body {
 
 }
 
+.error {
+    color: red;
+    font-size: 1rem;
+    margin-top: 0.5em;
+}
+
 .center-container p {
     margin-top: 5rem;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     color: yellow;
     font-family: 'Satisfy';
     margin-bottom: 0px;
