--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,4 @@
-.header {
+.order-form-header {
     background-color: #CE2829;
     display: flex;
     justify-content: center;
@@ -7,14 +7,14 @@
     padding: 5px;
 }
 
-.header img {
+.order-form-header img {
     width: 26rem;
     margin-top: 2rem;
 }
 
 @media (max-width: 780px) {
 
-    .header img {
+    .order-form-header img {
         width: 15rem;
         margin-top: 2rem;
     }
