--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,72 +1,377 @@
-.home-page {
-    margin: 0;
-    padding: 0;
-    background-image: url('/images/iteration-1-images/home-banner.png');
+body {
+    background-color: white;
+}
+
+.header {
+    background-image: url("./images/iteration-1-images/home-banner.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    color: #ffffff;
+    text-align: center;
+    padding: 40px 20px;
     height: 100vh;
-    width: 100vw;
+}
+
+.header-content {
+    margin-top: -1rem;
+}
+
+.header-content img {
+    width: 18rem;
+}
+
+.header-subtitle {
+    padding-top: 3rem;
+    font-size: 1.5rem;
+    color: yellow;
+    font-family: 'Satisfy';
+    margin-bottom: -0.2rem;
+}
+
+.header-main-text {
+    font-size: 5rem;
+    font-family: 'Roboto Condensed';
+    font-weight: 200;
+    margin-top: 0;
 
 }
 
-.container {
+.header-button {
+    margin-top: 1rem;
+    width: 250px;
+    height: 45px;
+    font-family: 'Roboto Condensed';
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #FFD65A;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+
+
+}
+
+.header-button:hover {
+    background-color: #16C47F;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+}
+
+.category-navbar {
+    margin-top: 1rem;
+}
+
+.category-item {
+    text-align: center;
+    margin: 0 40px;
+}
+
+.category-icon {
+    width: 50px;
+    height: 40px;
+    margin-bottom: 5px;
+}
+
+.category-text {
+    font-size: 0.9rem;
+    color: #333333;
+    font-weight: bold;
+}
+
+.category-item:hover .category-text {
+    color: #d9534f;
+}
+
+.category-item:hover .category-icon {
+    transform: scale(1.1);
+    transition: 0.2s ease-in-out;
+}
+
+.card-container {
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2rem;
+    min-height: 30;
+    background-color: white;
+    margin-top: 3.5rem;
+    margin-right: 1rem;
+}
+
+.card-custom-1 {
+
+    border-radius: 12px;
+    overflow: hidden;
+    text-align: left;
 
 }
 
-img {
-    width: 20%;
-    height: 20%;
-    margin-bottom: 3rem;
+.card-custom-1 img {
+    height: 490px;
+    object-fit: cover;
 }
 
-
-
-h3 {
-    font-family: 'Roboto Condensed';
-    font-weight: 300;
+.card-custom-1 h5 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 4.2rem;
     color: white;
-    font-size: 4.5rem;
-
-
 }
 
-.container button {
-    background-color: #FFC300;
-    margin-top: 1rem;
-    color: #000;
-    border: none;
-    padding: 10px 30px;
-    font-size: 16px;
+.card-custom-1 p {
+    color: white;
     font-family: 'Roboto Condensed';
-    border-radius: 30px;
+    font-weight: 500;
+    font-size: 1.3rem;
 }
 
-@media (max-width: 768px) {
-    .home-page {
-        padding: 1rem;
+.card-custom-1 button {
+    background-color: white;
+    color: red;
+    font-weight: 500;
+    font-family: 'Roboto Condensed';
+    width: 200px;
+    height: 50px;
+    margin-top: 2rem;
+    border-radius: 45px;
+}
 
-    }
+.card-custom-2 {
+    border-radius: 30px;
+    overflow: hidden;
+    text-align: left;
+    margin-left: 1rem;
+    width: 30rem;
+    height: 15rem;
+}
 
-    img {
-        width: 70%;
-        margin-bottom: 2rem;
-    }
+.card-custom-2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-    h3 {
-        font-size: 4rem;
-        text-align: center;
+.card-custom-2 h5 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2rem;
+    color: white;
+}
 
-    }
+
+.card-custom-2 button {
+    margin-top: 4rem;
+    background-color: white;
+    color: red;
+    font-weight: 500;
+    font-family: 'Roboto Condensed';
+    width: 140px;
+    height: 45px;
+    border-radius: 45px;
+}
 
 
-    .container button {
-        padding: 12px 30px;
-        font-size: 18px;
-    }
+.card-custom-3 {
+    margin-top: 0.4rem;
+    margin-right: 0;
+    border-radius: 30px;
+    overflow: hidden;
+    text-align: left;
+    margin-left: 1rem;
+    width: 30rem;
+    height: 15rem;
+}
+
+.card-custom-3 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-custom-3 h5 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2rem;
+    color: black;
+}
+
+
+.card-custom-3 button {
+    margin-top: 4rem;
+    background-color: white;
+    color: red;
+    border: none;
+    font-family: 'Roboto Condensed';
+    font-weight: 500;
+    width: 140px;
+    height: 45px;
+    border-radius: 45px;
+}
+
+.card-custom-3 span {
+    color: red;
+}
+
+.menü-alt-baslik {
+    text-align: center;
+    margin-top: 3rem;
+}
+
+.menü-alt-baslik p {
+    color: red;
+    font-family: 'Satisfy';
+    font-style: italic;
+    font-size: 1.8rem;
+    margin-bottom: -1rem;
+}
+
+.menü-alt-baslik span {
+    font-size: 3rem;
+    font-family: 'Roboto Condensed';
+    font-weight: 500;
+}
+
+.category-buttons {
+    margin-top: 2rem;
+    gap: 3rem;
+    display: flex;
+    justify-content: center;
+    height: 3rem;
+    gap: 3.5rem;
+}
+
+.category-buttons img {
+    height: 2rem;
+
+}
+
+.category-buttons button {
+    border-radius: 45px;
+    background-color: white;
+    color: black;
+    border: none;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    font-family: 'Roboto Condensed';
+    font-size: 1.1rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.3rem;
+
+
+}
+
+.menü-yemek-kartları {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    min-height: 30;
+    background-color: white;
+    margin-top: 3.5rem;
+    gap: 2rem;
+    margin-bottom: 23rem;
+
+}
+
+.yemek-kartı-1 {
+    height: 22rem;
+    width: 20rem;
+}
+
+.yemek-kartı-1 img {
+    margin-top: 1.8rem;
+    margin-left: 2.3rem;
+    width: 15rem;
+    height: auto;
+}
+
+.yemek-kartı-1 h5 {
+    margin-top: 17rem;
+    font-size: 1.4rem;
+    text-align: left;
+    font-family: 'Roboto Condensed';
+}
+
+.yemek-kartı-1 p {
+    margin-top: -0.2rem;
+    font-family: 'Roboto Condensed';
+    font-size: 1rem;
+    text-align: left;
+    display: flex;
+    gap: 12rem;
+}
+
+.yemek-kartı-1 span {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.yemek-kartı-2 {
+    height: 22rem;
+    width: 20rem;
+}
+
+.yemek-kartı-2 img {
+    margin-top: 1.8rem;
+    margin-left: 2.3rem;
+    width: 15rem;
+    height: auto;
+}
+
+.yemek-kartı-2 h5 {
+    margin-top: 17rem;
+    font-size: 1.4rem;
+    text-align: left;
+    font-family: 'Roboto Condensed';
+}
+
+.yemek-kartı-2 p {
+    margin-top: -0.2rem;
+    font-family: 'Roboto Condensed';
+    font-size: 1rem;
+    text-align: left;
+    display: flex;
+    gap: 12rem;
+}
+
+.yemek-kartı-2 span {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.yemek-kartı-3 {
+    height: 22rem;
+    width: 20rem;
+}
+
+.yemek-kartı-3 img {
+    margin-top: 1.8rem;
+    margin-left: 2.3rem;
+    width: 15rem;
+    height: auto;
+}
+
+.yemek-kartı-3 h5 {
+    margin-top: 17rem;
+    font-size: 1.4rem;
+    text-align: left;
+    font-family: 'Roboto Condensed';
+}
+
+.yemek-kartı-3 p {
+    margin-top: -0.2rem;
+    font-family: 'Roboto Condensed';
+    font-size: 1rem;
+    text-align: left;
+    display: flex;
+    gap: 12rem;
+}
+
+.yemek-kartı-3 span {
+    font-weight: bold;
+    font-size: 1.2rem;
 }
