--- a/src/components/OrderConfirmation.css
+++ b/src/components/OrderConfirmation.css
@@ -1,17 +1,16 @@
 .order-conformation-page {
     margin: 0;
-    height: 100%;
+    height: 300%;
     background-color: #CE2829;
 }
+
 
 
 .center-container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 4rem;
     align-items: center;
-    height: 100vh;
+    height: 120vh;
     text-align: center;
 
 }
@@ -25,7 +24,7 @@
 
 
 .center-container p {
-    margin-top: 1rem;
+    margin-top: 4rem;
     font-size: 1.5rem;
     color: yellow;
     font-family: 'Satisfy';
@@ -51,7 +50,7 @@
 .siparis-ozeti {
     display: flex;
     flex-direction: column;
-    gap: 1 px;
+    gap: 5px;
     padding: 20px;
     padding-top: 3rem;
 
@@ -70,10 +69,9 @@
     font-weight: 200;
     color: white;
     font-size: 1rem;
-    text-align: left;
+    text-align: center;
     margin: 0;
     padding: 0;
-    margin-left: 40px;
 
 }
 
@@ -86,11 +84,12 @@
 
 
 .siparis-ozeti .card {
-    width: 330px;
+    width: 380px;
     height: 180px;
-    margin-top: 5rem;
+    margin-top: 3rem;
     background-color: transparent;
     border: 1px solid white;
+    margin-left: 50px;
 }
 
 .siparis-ozeti .card h6 {
@@ -99,28 +98,27 @@
     font-family: 'Roboto Condensed';
     font-weight: 400;
     color: white;
-    padding-top: 0.5rem;
+    padding-top: 1rem;
 }
 
 .siparis-ozeti .card strong {
     color: black;
-    font-size: 1.3rem;
-    margin-left: -2rem;
+    font-size: 1.2rem;
     font-family: 'Roboto Condensed';
     font-weight: 200;
     color: white;
+    text-align: left;
 
 }
 
 .siparis-ozeti .card span {
     color: black;
-    font-size: 1.3 rem;
+    font-size: 1.4rem;
     font-family: 'Roboto Condensed';
     font-weight: 300;
     color: white;
     display: inline-block;
-    text-align: left;
-    margin-left: 8rem;
+    margin-left: 11rem;
 
 
 }
